# focus-timer-ai-mcp

./: .cursorrules  .gitignore  .mcp.json  CHANGELOG.md  README.md  acp.json  glama.json  llms.txt  package.json  pyproject.toml  server.json  server.py  smithery.yaml
.well-known/: agent-card.json  agent.json  mcp-server-card.json
.well-known/mcp/: server-card.json
focus_timer_ai_mcp/: server.py
