[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "focus-timer-ai-mcp"
version = "1.0.0"
description = "Focus Timer Ai automation via MCP. Includes start focus, pause focus, resume focus. By MEOK AI Labs."
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [{name = "MEOK AI Labs", email = "nicholas@meok.ai"}]
dependencies = ["mcp>=1.0.0"]
keywords = ["mcp", "ai", "meok", "focus", "timer"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
]
[project.urls]
Homepage = "https://meok.ai"
Repository = "https://github.com/CSOAI-ORG/focus-timer-ai-mcp"
[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["server.py"]

[project.scripts]
focus_timer_ai_mcp = "server:main"
